<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        tools:context="yingchen.musicplayer.MainActivity"
        android:layout_height="match_parent">

        <!-- app bar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include
                android:id="@+id/app_bar"
                layout="@layout/app_bar" />
        </LinearLayout>

        <!-- firebase -->
        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="...">

        </ListView>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom">
        <EditText
            android:id="@+id/todoText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/addButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Add New Item"/>
        </LinearLayout>

        <!-- songs/album/artist list  -->
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/song_list_container"
            android:background="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <!-- navigation drawer -->
    <fragment
        android:id="@+id/fragment_navigation_drawer"
        android:name="yingchen.musicplayer.NavigationDrawerFragment"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:layout="@layout/fragment_navigation_drawer"
        tools:layout="@layout/fragment_navigation_drawer" />
</android.support.v4.widget.DrawerLayout>




    <!--  <yingchen.musicplayer.unused.Visualizer
          android:id="@+id/visualizerView"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent" >
      </yingchen.cis690.musicplayer.unused.Visualizer>

       android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"

       android:id="@+id/song_list_container"
      android:layout_width="fill_parent"
      android:layout_height="0dp"
      android:layout_margin="10dp"
      android:layout_weight="1"
      android:background="#000"

      <FrameLayout
  android:id="@+id/song_list_container"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#000" />
   <ListView
      android:id="@+id/song_list_main"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" >
  </ListView>
   <fragment
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/songFragment" />
      !-->