<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="48dp">
    <ImageView
        android:layout_gravity="center_vertical"
        android:id="@+id/songIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_centerVertical = "true"
        android:src="@drawable/albums"/>
    <TextView
        android:layout_gravity="center_vertical"
        android:id="@+id/songsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_centerVertical = "true"
        android:text="briefLyrics"/>
</LinearLayout>